More styling changes

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,15 @@ h1 {
   align-items: center;
 }
 
+#locationInput {
+  font-size: 20px;
+  padding: 5px;
+}
+
 #searchBtn {
   margin-left: 10px;
+  font-size: 20px;
+  padding: 5px;
 }
 
 .card {
