--- a/styles.css
+++ b/styles.css
@@ -54,16 +54,47 @@ h1 {
   align-items: center;
 }
 
-.forecast-card {
-  margin: 15px;
-}
-
 #temperature {
   margin-left: 10px;
 }
 
 #forecast {
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  justify-content: space-evenly;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  margin-top: 15px;
+}
+
+.forecast-card {
+  border: 1px solid white;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-basis: calc(20% - 30px);
+  margin-right: 15px;
+  min-width: 150px;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-item: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  #forecast {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .forecast-card {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
 }
